# fewshoter

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: api_server.py  evaluate.py  inference.py  train.py  web_demo.py
configs/: bioclip_biology_classification.yaml  birdsurveillance_classification.yaml  cameratrap_classification.yaml  insects_classification.yaml  wildboar_classification.yaml
core/: __init__.py  config.py  episode.py  utils.py
data/: __init__.py  data_utils.py  datasets.py  samplers.py  support_manager.py
descriptions/: biology_template.py  birdsurveillance_classification.py  cameratrap_classification.py
docs/: SUPPORT_SET_GUIDE.md
engine/: __init__.py  classifier.py  nn_classifier.py  optimization.py  svm_classifier.py
evaluation/: __init__.py  base.py  episodic.py
examples/: README.md  basic_classification.py  batch_classification.py  bioclip_classification.py
features/: __init__.py  attribute_generator.py  dim_reducer.py  feature_aligner.py  feature_extractor.py
learners/: __init__.py  base.py  prototypical.py  utils.py
modalities/: __init__.py  audio.py  base.py  image.py
peft/: __init__.py  lora.py
perch_integration/: __init__.py  audio_pipeline.py  perch_encoder.py
tests/: test_cli_smoke.py
tests/cli/: test_episodic_cli.py
tests/core/: test_architecture_contracts.py  test_config_compatibility.py  test_episode.py
tests/data/: test_episode_dataset.py  test_episode_sampler.py
tests/evaluation/: test_episodic_evaluator.py
tests/learners/: test_distance_utils.py  test_prototypical.py
tests/modalities/: test_audio_contracts.py  test_clip_encoder.py  test_perch_placeholder.py
tests/parity/: test_legacy_clip_path.py
tests/peft/: test_lora.py
